--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "lucide-react": "^0.456.0",
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
