--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.13",
     "geist": "^1.3.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
