--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.1",
+    "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
