--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "clean": "rm -rf .next && rm -rf node_modules",
     "dev:clean": "pnpm clean && pnpm install && pnpm run dev",
     "build": "next build",
+    "build:clean": "pnpm clean && pnpm install && pnpm run build",
     "start": "next start",
+    "serve": "pnpm build && pnpm start",
+    "serve:clean": "pnpm build:clean && pnpm start",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
     "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
@@ -15,6 +18,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/analytics": "^1.3.2",
@@ -30,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.1",
     "react-icons": "^5.3.0",
+    "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
