--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@uploadthing/react": "^7.1.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.7",
@@ -37,6 +38,7 @@
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
