--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.13",
     "geist": "^1.3.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
     "react": "^18.3.1",
