--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@uploadthing/react": "^7.1.1",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
@@ -36,6 +37,7 @@
     "next": "14.2.7",
     "qss": "^3.0.0",
     "react": "^18.3.1",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.1",
     "react-icons": "^5.3.0",
