--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:clean": "pnpm clean && pnpm install && pnpm run dev",
     "build": "next build",
     "build:clean": "pnpm clean && pnpm install && pnpm run build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "serve": "pnpm build && pnpm start",
     "serve:clean": "pnpm build:clean && pnpm start",
     "lint": "next lint",
