--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -38,7 +40,6 @@
     "react": "^18.3.1",
     "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.5.1",
     "react-icons": "^5.3.0",
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
