--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,15 @@
 {
   "bracketSpacing": true,
   "endOfLine": "lf",
-  "printWidth": 80,
+  "printWidth": 120,
   "semi": true,
   "singleQuote": false,
   "tabWidth": 2,
-  "trailingComma": "all",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "trailingComma": "none",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
+  "arrowParens": "always",
+  "htmlWhitespaceSensitivity": "strict",
+  "jsxSingleQuote": false
 }
