--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -41,6 +41,11 @@ jobs:
 
           cd ${{ secrets.PROJECT_DIR }}
 
+          if [ -d ".next.bak" ]; then
+            echo "Removing previous backup"
+            rm -rf .next.bak
+          fi
+
           if [ -d ".next" ]; then
             mv .next .next.bak
           fi
@@ -48,7 +53,19 @@ jobs:
           git fetch origin main
           git reset --hard origin/main
 
-          echo "CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}" > .env
+          # reset .env file
+          echo "Resetting .env file"
+          rm -f .env
+
+          echo "Setting up environment variables"
+          
+          echo "CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}" >> .env
+          echo "RESEND_API=${{ secrets.RESEND_API }}" >> .env
+          echo "RESEND_TO_EMAIL=${{ secrets.RESEND_TO_EMAIL }}" >> .env
+          echo "RESEND_FROM_EMAIL=${{ secrets.RESEND_FROM_EMAIL }}" >> .env
+          echo "RESEND_USER_MAIL_SENDER_MAIL=${{ secrets.RESEND_USER_MAIL_SENDER_MAIL }}" >> .env
+          echo "BLOG_URL=${{ secrets.BLOG_URL }}" >> .env
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
 
           command -v pnpm >/dev/null || npm install -g pnpm
           command -v pm2 >/dev/null || npm install -g pm2
