--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "clean": "rm -rf .next && rm -rf node_modules",
-    "dev:clean": "pnpm clean && pnpm install && pnpm run dev",
+    "ins:clean": "pnpm clean && pnpm install",
+    "dev:clean": "pnpm ins:clean && pnpm run dev",
     "build": "next build",
-    "build:clean": "pnpm clean && pnpm install && pnpm run build",
+    "build:clean": "pnpm ins:clean && pnpm run build",
     "start": "next start",
     "serve": "pnpm build && pnpm start",
     "serve:clean": "pnpm build:clean && pnpm start",
