--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo -p 3002",
     "clean": "rm -rf .next && rm -rf node_modules",
     "ins:clean": "pnpm clean && pnpm install",
     "dev:clean": "pnpm ins:clean && pnpm run dev",
@@ -39,10 +39,12 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
+    "photoswipe": "^5.4.4",
     "qss": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-photoswipe-gallery": "^3.0.2",
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
