--- a/.github/workflows/GHCR-Image.yml
+++ b/.github/workflows/GHCR-Image.yml
@@ -11,9 +11,11 @@ on:
 permissions:
   contents: read
   packages: write
+  id-token: write
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   push-store-image:
@@ -24,57 +26,44 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare versions and ensure lowercase repository name
-        id: prep
+      - name: Get commit info
+        id: commit
         run: |
-          # Convert repository name to lowercase
-          REPO_LC="${GITHUB_REPOSITORY,,}"
-          echo "REPO=$REPO_LC" >> $GITHUB_ENV
+          echo "date=$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
+          # Get commit message and sanitize it for tag use (remove spaces and special chars)
+          commit_msg=$(git log -1 --pretty=%B | head -n1 | tr -dc '[:alnum:]-_' | tr '[:upper:]' '[:lower:]')
+          # Truncate to 50 chars max
+          commit_msg="${commit_msg:0:50}"
+          echo "message=$commit_msg" >> $GITHUB_OUTPUT
 
-          # Generate versions
-          echo "DATE_VERSION=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
-          echo "SHA_VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
-
-          # Extract tag if it exists, otherwise use 'fallback'
-          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
-            TAG_VERSION=${GITHUB_REF#refs/tags/}
-          else
-            TAG_VERSION="fallback"
-          fi
-          echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
+      - name: Prepare metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=long
+            type=raw,value=${{ steps.commit.outputs.date }}
+            type=raw,value=${{ steps.commit.outputs.message }}
+            type=ref,event=tag
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GHCR
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.REPO }}:latest
-            ${{ env.REGISTRY }}/${{ env.REPO }}:${{ env.DATE_VERSION }}
-            ${{ env.REGISTRY }}/${{ env.REPO }}:${{ env.SHA_VERSION }}
-            ${{ env.REGISTRY }}/${{ env.REPO }}:${{ env.TAG_VERSION }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: Verify no untagged images
-        run: |
-          # List images and ensure no untagged ones
-          UNTAGGED_IMAGES=$(docker images --filter "dangling=true" -q)
-          if [ -n "$UNTAGGED_IMAGES" ]; then
-            echo "Error: There are untagged images present!"
-            exit 1
-          fi
-
-      - name: Cleanup dangling images
-        if: always()
-        run: docker image prune -f
