--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "serve": "pnpm build && pnpm start",
     "serve:clean": "pnpm build:clean && pnpm start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
-    "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml}\"",
+    "check": "prettier --check \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml}\"",
     "prepare": "husky"
   },
   "dependencies": {
