feat: introducing guestbook with next-auth setup

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,7 @@ RESEND_FROM_EMAIL=
 RESEND_USER_MAIL_SENDER_MAIL=
 BLOG_URL=
 BASE_URL=
+NEXT_PUBLIC_API_URL=
+NEXTAUTH_SECRET=
+GITHUB_SECRET=
+GITHUB_ID=
