--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
+    "next-auth": "5.0.0-beta.25",
     "photoswipe": "^5.4.4",
     "qss": "^3.0.0",
     "react": "^18.3.1",
