feat: complete functionality of guestbook

--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,6 @@ BLOG_URL=
 BASE_URL=
 NEXT_PUBLIC_API_URL=
 NEXTAUTH_SECRET=
-GITHUB_SECRET=
-GITHUB_ID=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+DATABASE_URL=
