--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -59,23 +59,27 @@ jobs:
 
           echo "Setting up environment variables"
 
-          echo "CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}" >> .env
-          echo "REPO_NAME=${{ secrets.REPO_NAME }}" >> .env
-          echo "RESEND_API=${{ secrets.RESEND_API }}" >> .env
-          echo "RESEND_TO_EMAIL=${{ secrets.RESEND_TO_EMAIL }}" >> .env
-          echo "RESEND_FROM_EMAIL=${{ secrets.RESEND_FROM_EMAIL }}" >> .env
-          echo "RESEND_USER_MAIL_SENDER_MAIL=${{ secrets.RESEND_USER_MAIL_SENDER_MAIL }}" >> .env
-          echo "BLOG_URL=${{ secrets.BLOG_URL }}" >> .env
-          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-          echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
-          echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
-          echo "GITHUB_SECRET=${{ secrets.ENV_GITHUB_SECRET }}" >> .env
-          echo "GITHUB_ID=${{ secrets.ENV_GITHUB_ID }}" >> .env
+            echo "CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}" >> .env
+            echo "REPO_NAME=${{ secrets.REPO_NAME }}" >> .env
+            echo "RESEND_API=${{ secrets.RESEND_API }}" >> .env
+            echo "RESEND_TO_EMAIL=${{ secrets.RESEND_TO_EMAIL }}" >> .env
+            echo "RESEND_FROM_EMAIL=${{ secrets.RESEND_FROM_EMAIL }}" >> .env
+            echo "RESEND_USER_MAIL_SENDER_MAIL=${{ secrets.RESEND_USER_MAIL_SENDER_MAIL }}" >> .env
+            echo "BLOG_URL=${{ secrets.BLOG_URL }}" >> .env
+            echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+            echo "NEXTAUTH_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
+            echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
+            echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
+            echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
+            echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
+            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+            echo "AUTH_TRUST_HOST=true" >> .env
 
           command -v pnpm >/dev/null || npm install -g pnpm
           command -v pm2 >/dev/null || npm install -g pm2
 
           pnpm install --frozen-lockfile --prefer-offline
+          pnpm run ins
           NEXT_TELEMETRY_DISABLED=1 pnpm run build
 
           if [ $? -eq 0 ]; then
