--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev --turbo",
     "clean": "rm -rf .next && rm -rf node_modules",
-    "ins:clean": "pnpm clean && pnpm install",
+    "ins": "pnpm install && prisma generate",
+    "ins:clean": "pnpm clean && pnpm install && prisma generate",
     "dev:clean": "pnpm ins:clean && pnpm run dev",
     "build": "next build",
     "build:clean": "pnpm ins:clean && pnpm run build",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
+    "@prisma/client": "6.4.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -41,6 +43,7 @@
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.25",
     "photoswipe": "^5.4.4",
+    "prisma": "^6.4.1",
     "qss": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -78,5 +81,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.19.0"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
