--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.25",
+    "nextjs-toploader": "^3.7.15",
     "photoswipe": "^5.4.4",
     "prisma": "^6.4.1",
     "qss": "^3.0.0",
