--- a/.github/workflows/Deployment.yml
+++ b/.github/workflows/Deployment.yml
@@ -25,6 +25,7 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
 
       - name: Deploy and Restart
         env:
@@ -33,50 +34,41 @@ jobs:
           PROJECT_DIR: ${{ secrets.PROJECT_DIR }}
           PM2_PROCESS_NAME: ${{ secrets.PM2_PROCESS_NAME }}
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.USERNAME }}@${{ secrets.HOST }} << 'ENDSSH'
-          set -e  # Exit on any error
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_IP << 'ENDSSH'
+          set -e
+
           export NVM_DIR="$HOME/.nvm"
           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          [ -f "$HOME/.profile" ] && source "$HOME/.profile"
 
-          if [ -f "$HOME/.profile" ]; then
-            source "$HOME/.profile"
-          fi
-
+          echo "Changing to project directory: $PROJECT_DIR"
           cd ${{ secrets.PROJECT_DIR }}
 
-          if [ -d ".next.bak" ]; then
-            echo "Removing previous backup"
-            rm -rf .next.bak
-          fi
+          [ -d ".next.bak" ] && rm -rf .next.bak
+          [ -d ".next" ] && mv .next .next.bak
 
-          if [ -d ".next" ]; then
-            mv .next .next.bak
-          fi
-
+          echo "Pulling latest code from git"
           git fetch origin main
           git reset --hard origin/main
 
-          # reset .env file
-          echo "Resetting .env file"
-          rm -f .env
+          echo "Setting up .env file"
+          cat > .env << EOT
+          CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}
+          REPO_NAME=${{ secrets.REPO_NAME }}
+          RESEND_API=${{ secrets.RESEND_API }}
+          RESEND_TO_EMAIL=${{ secrets.RESEND_TO_EMAIL }}
+          RESEND_FROM_EMAIL=${{ secrets.RESEND_FROM_EMAIL }}
+          RESEND_USER_MAIL_SENDER_MAIL=${{ secrets.RESEND_USER_MAIL_SENDER_MAIL }}
+          NEXTAUTH_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
+          NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}
+          GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}
+          EOT
 
-          echo "Setting up environment variables"
-          echo "CONTRIBUTION_GRAPH_SECRET=${{ secrets.CONTRIBUTION_GRAPH_SECRET }}" >> .env
-          echo "REPO_NAME=${{ secrets.REPO_NAME }}" >> .env
-          echo "RESEND_API=${{ secrets.RESEND_API }}" >> .env
-          echo "RESEND_TO_EMAIL=${{ secrets.RESEND_TO_EMAIL }}" >> .env
-          echo "RESEND_FROM_EMAIL=${{ secrets.RESEND_FROM_EMAIL }}" >> .env
-          echo "RESEND_USER_MAIL_SENDER_MAIL=${{ secrets.RESEND_USER_MAIL_SENDER_MAIL }}" >> .env
-          echo "BLOG_URL=${{ secrets.BLOG_URL }}" >> .env
-          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-          echo "NEXTAUTH_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
-          echo "NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}" >> .env
-          echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env
-          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-          echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-          echo "AUTH_TRUST_HOST=true" >> .env
-
+          echo "Installing dependencies"
           command -v pnpm >/dev/null || npm install -g pnpm
           command -v pm2 >/dev/null || npm install -g pm2
 
@@ -85,13 +77,15 @@ jobs:
           NEXT_TELEMETRY_DISABLED=1 pnpm run build
 
           if [ $? -eq 0 ]; then
+            echo "Build successful, removing backup and restarting PM2"
             rm -rf .next.bak
             pm2 restart ${{ secrets.PM2_PROCESS_NAME }} --update-env
+            echo "Deployment completed successfully"
           else
+            echo "Build failed, restoring backup"
             rm -rf .next
-            mv .next.bak .next
-            echo "Build failed, restored previous build"
+            [ -d ".next.bak" ] && mv .next.bak .next
+            echo "Deployment failed, previous version restored"
             exit 1
           fi
           ENDSSH
-          rm -rf ~/.ssh/id_rsa
