--- a/package.json
+++ b/package.json
@@ -31,19 +31,23 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@react-email/components": "^0.0.31",
+    "@types/xml2js": "^0.4.14",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
+    "dompurify": "^3.2.5",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
     "geist": "^1.3.1",
     "globals": "^15.14.0",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.2.3",
     "lucide-react": "^0.456.0",
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.25",
     "nextjs-toploader": "^3.7.15",
+    "openai": "^4.95.0",
     "photoswipe": "^5.4.4",
     "posthog-js": "^1.232.4",
     "prisma": "^6.4.1",
@@ -55,6 +59,8 @@
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "xml2js": "^0.6.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
