--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-photoswipe-gallery": "^3.0.2",
+    "react-zoom-pan-pinch": "^3.7.0",
     "resend": "4.0.1-alpha.0",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
