--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-zoom-pan-pinch": "^3.7.0",
     "resend": "4.5.1",
     "sharp": "^0.34.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "xml2js": "^0.6.2",
