--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@react-email/components": "^0.0.39",
     "@tailwindcss/postcss": "^4.1.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.2.5",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.10.5",
