--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml}\"",
     "check": "prettier --check \"**/*.{ts,tsx,mjs,js,jsx,md,mdx,css,yaml,yml}\"",
     "prepare": "husky",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "check:types": "tsc --noEmit"
   },
   "dependencies": {
     "@octokit/rest": "^21.1.1",
@@ -49,6 +50,7 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "openai": "^4.98.0",
     "photoswipe": "^5.4.4",
