--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
+    "open-graph-scraper": "^6.10.0",
     "openai": "^4.98.0",
     "photoswipe": "^5.4.4",
     "posthog-js": "^1.240.5",
     "prisma": "^6.7.0",
-    "qss": "^3.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
